# spikeTriggeredMoments

./: ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  NATURAL_IMAGE_PATCH_USAGE.md  PYTHON_INTEGRATION.md  PYTHON_SETUP_GUIDE.md  README.md  UNIVERSAL_FUNCTION_GUIDE.md  code_validation_report.md  example_natural_image_usage.m  getNaturalImagePatchFromLocation2.m  getNaturalImagePatchFromLocation2_improved.m  getNaturalImagePatchFromLocation2_python.m  getNaturalImagePatchFromLocation2_universal.m  getNaturalImagePatchFromLocation_universal.m  manualRidgeRegressionCustom.m  natural_image_patch_extractor.py  pyproject.toml  python_examples.py  simple_patch_extractor.py  spikeTriggerMoments.m  spike_triggered_moments_master.m  stm_clean.m  stm_cross_valid.m  stm_text.m  test_enhanced_patch_extraction.py  universal_function_examples_matlab.m  universal_function_examples_python.py
docs/: METHODOLOGY.md
