[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spike-triggered-moments"
dynamic = ["version"]
description = "A Python toolkit for analyzing higher-order statistical moments in spike-triggered analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["neuroscience", "spike analysis", "statistical moments", "electrophysiology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.24.0",
    "pandas>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/your-username/spike-triggered-moments"
Repository = "https://github.com/your-username/spike-triggered-moments"
Documentation = "https://spike-triggered-moments.readthedocs.io"
"Bug Tracker" = "https://github.com/your-username/spike-triggered-moments/issues"

[tool.setuptools_scm]
write_to = "spike_triggered_moments/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["spike_triggered_moments*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
